<resources>
    <string name="app_name">GooglePlayDemo</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="app_detail">应用详情</string>
    <string name="home">首页</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="install_manager">安装包管理</string>
    <string name="feedback">反馈</string>
    <string name="updates">检查更新</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="user_name">沉默的范大叔</string>
    <string name="user_email">526247082@qq.com</string>
    <string name="app_size">大小：%s</string>
    <string name="download_count">下载量：%s</string>
    <string name="version_code">版本号：%s</string>
    <string name="time">时间：%s</string>
    <string name="download">下载</string>
    <string name="continue_download">继续</string>
    <string name="waiting">等待</string>
    <string name="retry">重试</string>
    <string name="install">安装</string>
    <string name="download_progress">%d%%</string>
    <string name="permission_denied">权限被拒绝，无法下载应用</string>
    <string name="pause">暂停</string>
</resources>
